Tooltip alignment fixes Tooltips on Sync icons

--- a/Project Gizmo/Gizmo V1_02/wwwroot/css/Custom/OR_Nav.css
+++ b/Project Gizmo/Gizmo V1_02/wwwroot/css/Custom/OR_Nav.css
@@ -621,6 +621,7 @@
     padding-top: 3px;
     padding-bottom: 3px;
     width: 100%;
+    min-width: 15px;
 }
 
 .btn-ellipses:hover .btn-dashed {
